Changes to be committed: 	modified:   README.md 	modified:   background/background.js 	modified:   manifest.json 	modified:   pages/blocked/blocked.html 	modified:   pages/blocked/blocked.js 	modified:   pages/options/options.html 	modified:   pages/options/options.js 	modified:   pages/popup/popup.html 	modified:   pages/popup/popup.js 	modified:   styles/stonewall-theme.css

--- a/styles/stonewall-theme.css
+++ b/styles/stonewall-theme.css
@@ -136,3 +136,26 @@ body.blocked {
   flex: 1;
 }
 
+body.blocked.noBreaks {
+  background-color: #f2f2f2;
+  color: #6e6e6e;
+  filter: grayscale(100%);
+}
+
+body.blocked.noBreaks #progressContainer {
+  background-color: #e0e0e0;
+}
+
+body.blocked.noBreaks #progressBar {
+  background: linear-gradient(to right, #c7c7c7, #a3a3a3);
+}
+
+body.blocked.noBreaks button {
+  background-color: #b8b8b8;
+  color: #f6f6f6;
+}
+
+body.blocked.noBreaks button:hover {
+  background-color: #aaaaaa;
+}
+
